<resources>
    <string name="app_name">Teacher</string>
    <string name="mName">com.ahaguru.teacherahaguru.ui.Signup.Signup.name</string>
    <string name="mPhone">com.ahaguru.teacherahaguru.ui.Signup.Signup.phone</string>
    <string name="mEmail">com.ahaguru.teacherahaguru.ui.Signup.Signup.email</string>
    <string name="mContactEmail">com.ahaguru.teacherahaguru.ui.Signup.Signup.contactEmail</string>
    <string name="mSubject">com.ahaguru.teacherahaguru.ui.Signup.Signup.subject</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string-array name="subjects">
        <item>English</item>
        <item>Chemistry</item>
        <item>Mathematics</item>
        <item>Biology</item>
    </string-array>

    <drawable name="actionbar_background">#FF0000</drawable>
    <color name="color_title">#00FF00</color>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tv_full_name">Full Name</string>
    <string name="et_full_name">Enter Your Full Name</string>
    <string name="tv_phone_number">Phone Number</string>
    <string name="et_phone_number">Enter Your Phone Number</string>
    <string name="tv_email_address">Email</string>
    <string name="tv_contact_email">Contact Email</string>
    <string name="et_email_address">Enter Your Email Address</string>
    <string name="same_as_above">Same as above</string>
    <string name="tv_subjects">Subjects</string>
    <string name="next">Next</string>
    <string name="select_subjects">Select Subjects</string>

    <string name="tv_teacher_code">Teacher Code</string>
    <string name="enter_the_teacher_code_shared_by_school">Please enter the teacher code shared by your school</string>
    <string name="et_enter_code">Enter Code</string>
    <string name="submit">Submit</string>

    <string name="waiting_for_school_approval">Waiting for school approval</string>
    <string name="req_submitted">Your request has been submitted to the school</string>
    <string name="you_will_get_email">You will get an email notification once your school approves your request</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>

    <string name="congratulations">Congratulations</string>
    <string name="your_request_has_been_approved">Your request has been approved</string>
    <string name="proceed">Proceed</string>

    <string name="oops">Oops!</string>
    <string name="req_denied">Your request has been denied by the school</string>
    <string name="try_again">Try again with the correct details</string>
    <string name="start_again">Start Again!</string>

    <string name="hint_word">Word.</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>

    <string name="invite_teachers">Invite Teachers</string>
    <string name="share_teacher_code">Share teacher code</string>


    <string name="teachers">Teachers</string>
    <string name="requests">Requests</string>
    <string name="invite">Invite</string>

    <string name="name">Name</string>

    <string name="sign_up">Sign Up</string>
    <string name="manage_teachers">Manage Teachers</string>

    <string name="share_code">Share this code with your teacher to join the app</string>

    <string name="subjects_list">Subjects List</string>
    <string name="english">English</string>
</resources>