<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnProceed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivCongrats"
            android:layout_width="110sp"
            android:layout_height="110sp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/congratulations"
            android:src="@drawable/congrats" />

        <TextView
            android:id="@+id/tvCongrats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congratulations"
            android:layout_centerHorizontal="true"
            android:textColor="@color/red"
            android:textSize="25sp"
            android:layout_below="@id/ivCongrats" />

        <TextView
            android:id="@+id/tvReqApproved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:text="@string/your_request_has_been_approved"
            android:textSize="18sp"
            android:layout_below="@id/tvCongrats" />


    </RelativeLayout>

    <Button
        android:id="@+id/btnProceed"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#2196F3"
        android:text="@string/proceed"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="20dp"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>